# qcten

./: .gitattributes  .gitignore  .lgtm.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
devtools/conda-envs/: qcten_env.yaml  test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  functionality.rst  getting_started.rst  index.rst  make.bat  reference_manual.rst
docs/autosummary/: qcten.canvas.rst
docs/manual/: index.rst
docs/manual/templates/: run.py
qcten/: __init__.py  _version.py  cli.py  common.py  common_ttk.py  global_data.py  main.py  prepare_input.py  prepare_workflow.py  process.py  t0d3.py  t1d3.py  t2d3.py
qcten/tests/: helper.py  test_calc.py  test_fullworkflow.py  test_inpread.py  test_qcten.py
qcten/tests/inptest_calc_t0/: args.ref  log.ref  options.ref  test.inp
qcten/tests/inptest_calc_t1/: args.ref  finp_args.ref  fulldata.ref  options.ref  test.inp
qcten/tests/inptest_calc_t2/: args.ref  fulldata.ref  grid_names.ref  log.ref  options.ref  test.inp
qcten/tests/inptest_t2/: args_t2  options_t2  t2.inp
qcten/tests/t0d3_vti_from_txt/: test.inp
qcten/tests/t1d3_omega/: test.inp
qcten/tests/t1d3_rortex_shear/: result.ref
qcten/tests/t2d3_invariants/: result.ref  test.inp
tests/: helper.py  test_calc.py  test_qcten.py
tests/inptest_calc_t0/: test.inp
tests/inptest_calc_t1/: test.inp
tests/inptest_calc_t2/: test.inp
tests/t1d3_norm_mean/: test.inp
tests/t1d3_omega/: test.inp
tests/t1d3_rortex_shear/: test.inp
tests/t2d3_invariants/: test.inp
(+22 files in other folders)
