[tool.poetry]
name = "qcten"
version = "0.1.0"
description = "write me"
authors = ["Gosia Olejniczak <gosia.olejniczak@gmail.com>"]
readme = "README.md"
packages = [{include = "qcten"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
pv-visualizer = "^0.1.4"

[tool.pytest.ini_options]
pythonpath = [
  "qcten"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
