[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    qcten/_version.py

[options]
package_dir=
    =qcten
packages=find:
include_package_data = True

[options.packages.find]
where=qcten

[options.package_data]
tests/testdata=
    *.csv

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = qcten/_version.py
versionfile_build = qcten/_version.py
tag_prefix = ''

[aliases]
test = pytest
