[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    qcten/_version.py

[options]
packages = find:
package_dir=
    =qcten

[options.packages.find]
where = .

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = qcten/_version.py
versionfile_build = qcten/_version.py
tag_prefix = ''

[aliases]
test = pytest
